--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@ body {
 * {
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: 'Arian_Grqi_U'; /* Name you want to use in CSS */
+  src: url('./assets/Arian_Grqi_U.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
